1 file modified, 1 added

--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -12,6 +12,9 @@
   <button (click)="share()">
     Share
   </button>
+  <app-products-alerts
+  [product]="product">
+  </app-products-alerts>
 </div>
 
 <!-- 
