--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -13,7 +13,8 @@
     Share
   </button>
   <app-products-alerts
-  [product]="product">
+  [product]="product"
+  (notify)="onNotify()">
   </app-products-alerts>
 </div>
 
